@@ -1088,6 +1088,19 @@
           </p>
           <hr class="soften" />
 
+          <img class="left" src="img/applications/glade.png" />
+          <p><b>Glade</b> is a RAD tool to enable quick and easy
+          development of user interfaces for the GTK+ toolkit. The user
+          interfaces designed in Glade are stored in the well-known
+          XML format, enabling easy integration with external tools.</p>
+          <p class="text-right">
+          <a class="btn" href="cmd://link?https://glade.gnome.org/"><span class="fa fa-info"></span></a>
+          <a class="glade-install btn btn-success" href="cmd://apt-install?glade"><span class="fa fa-download"></span>&nbsp; Install</a>
+          <a class="glade-reinstall btn" href="cmd://apt-install?glade"><span class="fa fa-refresh"></span>&nbsp; Reinstall</a>
+          <a class="glade-remove btn btn-danger" href="cmd://apt-remove?glade"><span class="fa fa-trash"></span>&nbsp; Remove</a>
+          </p>
+          <hr class="soften" />
+
           <img class="left" src="img/applications/meld.png" />
           <p><b>Meld</b> is a graphical diff viewer and merge application.
           It supports 2 and 3-file  diffs, recursive directory diffs,
