@@ -580,17 +580,18 @@ class AppView(WebKit.WebView):
         'audio-recorder', 'bleachbit', 'blender', 'btsync-gui', 'bzr',
         'caja-dropbox', 'caja-share', 'calibre', 'chromium-browser',
         'darktable', 'dia-gnome', 'eviacam', 'filezilla', 'firefox',
-        'flashplugin-installer', 'geany', 'gimp', 'git', 'glabels',
-        'gnome-disk-utility', 'gnome-schedule', 'gnote', 'gnucash',
-        'gramps', 'gobby', 'google-chrome-stable', 'google-earth-stable',
-        'google-musicmanager-beta', 'google-talkplugin', 'handbrake',
-        'hardinfo', 'icedtea-7-plugin', 'indicator-kdeconnect',
-        'inkscape', 'insync', 'libavcodec-extra', 'libdvdcss2',
-        'makemkv-bin', 'meld', 'minecraft-installer', 'minecraft-server-installer',
-        'mumble', 'opera-stable', 'pavucontrol', 'pithos', 'pitivi', 'planner',
-        'poedit', 'pysolfc', 'rapid-photo-downloader', 'redshift',
-        'remmina', 'scribus', 'simplescreenrecorder', 'skype',
-        'software-center', 'spideroakone', 'spotify-client',
+        'flashplugin-installer', 'geany', 'gimp', 'git', 'glade',
+        'glabels', 'gnome-disk-utility', 'gnome-schedule', 'gnote',
+        'gnucash', 'gramps', 'gobby', 'google-chrome-stable',
+        'google-earth-stable', 'google-musicmanager-beta',
+        'google-talkplugin', 'handbrake', 'hardinfo',
+        'icedtea-7-plugin', 'indicator-kdeconnect', 'inkscape',
+        'insync', 'libavcodec-extra', 'libdvdcss2', 'makemkv-bin',
+        'meld', 'minecraft-installer', 'minecraft-server-installer',
+        'mumble', 'opera-stable', 'pavucontrol', 'pithos', 'pitivi',
+        'planner', 'poedit', 'pysolfc', 'rapid-photo-downloader',
+        'redshift', 'remmina', 'scribus', 'simplescreenrecorder',
+        'skype', 'software-center', 'spideroakone', 'spotify-client',
         'steam-launcher', 'stellarium', 'supertuxkart', 'sweethome3d',
         'synapse', 'synaptic', 'syncthing', 'telegram', 'terminator',
         'tor-browser', 'ubuntu-sdk', 'uget', 'variety', 'veracrypt',
