@@ -17,8 +17,9 @@ ubuntu-mate-welcome (16.04.1~xenial1.2) xenial; urgency=medium
   [ Martin Wimpress ]
   * Added miscellaneous tasks to update cache, fix an incomplete install
   and fix broken dependencies.
+  * Added Firmware and Codecs one-click installers to Getting Started.
   * Added 0 A.D, Audio Recorder, Bazaar, BtSync, Caja Share, Dia, Git,
-  Gobby, KDE Connect Indicator, Minecraft Server, Opera, Poedit,
+  Glade, Gobby, KDE Connect Indicator, Minecraft Server, Opera, Poedit,
   Stellarium and Tor Browser.
   * Updated Dropbox, VeraCrypt and X2Go.
   * Installing Adobe Flash now uses flashplugin-installer.
